# lux

./: .gitignore  DECISIONS.md  DESIGN.md  GRAMMAR.md  LANDSCAPE.md  MANIFESTO.md  README.md  ROADMAP.md  STRATEGY.md  TAO.md  USERS.md
action/: README.md  action.yml
deck/: lux-intro.html  lux-intro.md
examples/: hello.gaze  ifelse.gaze  invoice.gaze  testing.gaze  testing.lux  traits.lux  weather.lux
examples/shortener/: FINDINGS.md  handler.lux  main.lux  model.lux  slug.lux  store.lux  test.lux
gaze/src/: ast.rs  effects.rs  interpreter.rs  main.rs  parser.rs
libgaze/: README.md  pyproject.toml
libgaze-ts/: README.md  package-lock.json  package.json
libgaze-ts/src/: analyzer.ts  cli.ts  effects.ts  index.ts  policy.ts
libgaze-ts/test/: test_api.js  test_cli.js  test_policy.js
libgaze/bench/: README.md  async_patterns.py  class_methods.py  edge_cases.py  network_patterns.py  pure_code.py  real_crewai_code_interpreter.py  real_crewai_selenium.py  run.py  scan_repos.py  stdlib_patterns.py
libgaze/src/libgaze/: __main__.py  analyzer.py  cli.py  effects.py
libgaze/tests/: test_api.py  test_cli.py  test_policy_extended.py
libgaze/tests/fixtures/real-world/: agent-tool-policy.gazepolicy  pure_business_logic.py  tricky_effects.py
liblux/: pyproject.toml
